fix: wrong margin in Ability/item details

--- a/src/components/AbilityDetails/AbilityDetails.module.css
+++ b/src/components/AbilityDetails/AbilityDetails.module.css
@@ -4,3 +4,6 @@
 .detailsText {
   color: var(--gw2-color-details-ability-type);
 }
+.mt12 {
+  margin-top: 12px;
+}
